--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -2,7 +2,8 @@
   "recommendations": [
     "astro-build.astro-vscode",
     "davidanson.vscode-markdownlint",
-    "esbenp.prettier-vscode"
+    "esbenp.prettier-vscode",
+    "unifiedjs.vscode-mdx"
   ],
   "unwantedRecommendations": []
 }
